# flash-sale

./: .env  README.md  docker-compose.yml
db/: init.sql
server/: Cargo.toml
server/.sqlx/: query-0e256ec25dcc4225162368d50f408c0a83f0d53a48471805aa5d8598f0155b3d.json  query-26b9ebf469d5a4d99ab38f6c1c258533055ab7d6cc179bdffa50030c513b2a7c.json  query-7a08eed3a339cd6cea72daea19af8df83a033b0ccde9ea8b47113301b2913c14.json  query-8b30ed2eba5424131a25f02f84c96634e1e53e4d34d176c11864b71e84a2be62.json  query-9ea8a825117c788709855570f7e930897f525011d45efe8b8ebd3b8a5d3c902e.json  query-9f80fc3c0a133f6ecd400f0535bf28d4a10316d320c6431e43e5cc2e24953788.json  query-a0c14aa41e8ac9a0a199c2ed97b1c445e679f601f5010ee0a6208d4eb976d8e1.json  query-a5bdb8fa7ddca21ff7c2404beba58219a504d0b5ceec0134b6c0cdbe22aa39ee.json  query-bf1241c05fb6235c5294db4adbc4e005ec0dbdfe5835b3858c92c4ba1468b5d2.json
server/migrations/: 20260120000000_init.sql  20260121000000_seed_data.sql  20260127000000_add_idempotency_key.sql
server/src/: error.rs  lib.rs  main.rs
server/src/adapters/db/: error_mapper.rs  mod.rs  pool.rs
server/src/adapters/http/: mod.rs  router.rs  routes.rs
server/src/app/: config.rs  mod.rs  order_queue.rs  runtime.rs  state.rs
server/src/domain/: flash_sale.rs  mod.rs  order.rs  product.rs  user.rs
server/src/errors/: api_error.rs  app_error.rs  domain_error.rs  mod.rs  repo_error.rs  service_error.rs
server/src/logic/: mod.rs  order_logic.rs  product_logic.rs  user_logic.rs
server/src/ports/: flash_sale_repo.rs  mod.rs  order_repo.rs  product_repo.rs  user_repo.rs
(+49 files in other folders)
